Fixed html not covering screen.

--- a/src/style/listing-page.css
+++ b/src/style/listing-page.css
@@ -1,18 +1,4 @@
-#outer-container{
-  background-color: rgb(228, 228, 228);
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-}
 
-#inner-container{
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  width: 60%;
-  margin: auto;
-  padding: 20px;
-}
 
 * {
   font-family: 'PT Sans', 'Arial', 'Arial Unicode MS', 'Helvetica,sans-serif';
